[gd_scene load_steps=3 format=3 uid="uid://dq40ndffxhokl"]

[ext_resource type="Script" path="res://src/UI/Body/GlobalStyles/Scripts/gradient_container.gd" id="1_rfktg"]
[ext_resource type="PackedScene" uid="uid://c3p2i38hqudow" path="res://src/UI/Body/GlobalStyles/Gradient/body_gradient.tscn" id="2_nwsn1"]

[node name="GradientContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rfktg")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActiveCheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "KEY_ACTIVE"

[node name="BodyGradient" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_nwsn1")]
layout_mode = 2
size_flags_vertical = 3

[connection signal="toggled" from="ScrollContainer/VBoxContainer/ActiveCheckButton" to="." method="_on_active_check_button_toggled"]
